# AdvancedProgrammingTask1

./: CMakeLists.txt  DrawableGameComponent.cpp  Game.cpp  GameComponent.h  README.md  main.cpp
Task1/: DrawableGameComponent.h  Game.h  GameComponent.cpp  main.cpp
Task2/: main.cpp
